them tat ca cac database

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         <activity
             android:name=".MainActivity" />
 
+        <activity
+            android:name=".CaidatActivity" />
+
     </application>
 
 </manifest>
