add tinh nang sapxep theo masv trong danhsachsinhvien.xml

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,8 +22,8 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".MainActivity" />
+<!--        <activity-->
+<!--            android:name=".MainActivity" />-->
 
         <activity
             android:name=".CaidatActivity" />
