--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Quanlysinhvien_app"
         tools:targetApi="31">
         <activity
-            android:name=".Select.Select_Sinhvien"
+            android:name=".User.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,11 +22,11 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".MainActivity" />
 
         <activity
             android:name=".CaidatActivity" />
-        <activity
-            android:name=".Tinhnang.Thongtinsinhvien" />
 
     </application>
 
