--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
             android:name=".dskhoa" />
         <activity
             android:name=".khoa" />
+        <activity
+            android:name=".mapin" />
+        <activity
+            android:name=".PinEntryActivity" />
+
     </application>
 
 </manifest>
