--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Quanlysinhvien_app"
         tools:targetApi="31">
         <activity
-            android:name=".Tinhnang.Diemdanhsv"
+            android:name=".Select.Select_Sinhvien"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +25,8 @@
 
         <activity
             android:name=".CaidatActivity" />
+        <activity
+            android:name=".Tinhnang.Thongtinsinhvien" />
 
     </application>
 
