--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Quanlysinhvien_app"
         tools:targetApi="31">
         <activity
-            android:name=".User.LoginActivity"
+            android:name=".Select.Select_Lop"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,10 +27,13 @@
 
         <activity
             android:name=".CaidatActivity" />
-        <activity
-            android:name=".Select.Select_Sinhvien" />
+
         <activity
             android:name=".Tinhnang.Thongtinsinhvien" />
+<!--        <activity-->
+<!--            android:name=".Select.Select_Lop" />-->
+        <activity
+            android:name=".Select.Select_Sinhvien" />
         <activity
             android:name=".Tinhnang.Diemdanhsv" />
         <activity
