--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Quanlysinhvien_app"
         tools:targetApi="31">
         <activity
-            android:name=".Select.Select_Khoa"
+            android:name=".User.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,6 +45,8 @@
 
         <activity
             android:name=".chucnangthem" />
+        <activity
+            android:name=".User.quenpass" />
 
         <activity
             android:name=".dskhoa" />
