--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Quanlysinhvien_app"
         tools:targetApi="31">
         <activity
-            android:name=".Select.Select_Sinhvien"
+            android:name=".Tinhnang.Nhapdiem"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,8 +36,8 @@
 <!--            android:name=".Select.Select_Sinhvien" />-->
         <activity
             android:name=".Tinhnang.Diemdanhsv" />
-        <activity
-            android:name=".Tinhnang.Nhapdiem" />
+<!--        <activity-->
+<!--            android:name=".Tinhnang.Nhapdiem" />-->
         <activity
             android:name=".Tinhnang.Themsinhvien" />
         <activity
@@ -54,8 +54,8 @@
             android:name=".mapin" />
         <activity
             android:name=".PinEntryActivity" />
-        <activity
-            android:name=".User.quenpass_nhaplai" />
+<!--        <activity-->
+<!--            android:name=".User.quenpass_nhaplai" />-->
         <activity
             android:name=".Tinhnang.Hienthi_Diem" />
     </application>
