--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Quanlysinhvien_app"
         tools:targetApi="31">
         <activity
-            android:name=".Select.Select_Sinhvien"
+            android:name=".Select.Select_Khoa"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,9 +47,8 @@
             android:name=".chucnangthem" />
 
         <activity
-            android:name=".dskhoa" />
-        <activity
-            android:name=".khoa" />
+            android:name=".Select.Select_Nganh" />
+
         <activity
             android:name=".mapin" />
         <activity
