--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Quanlysinhvien_app"
         tools:targetApi="31">
         <activity
-            android:name=".Select.Select_Khoa"
+            android:name=".Tinhnang.Diemdanhsv"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,8 +34,8 @@
 <!--            android:name=".Select.Select_Lop" />-->
 <!--        <activity-->
 <!--            android:name=".Select.Select_Sinhvien" />-->
-        <activity
-            android:name=".Tinhnang.Diemdanhsv" />
+<!--        <activity-->
+<!--            android:name=".Tinhnang.Diemdanhsv" />-->
 <!--        <activity-->
 <!--            android:name=".Tinhnang.Nhapdiem" />-->
         <activity
