--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Quanlysinhvien_app"
         tools:targetApi="31">
         <activity
-            android:name=".Tinhnang.HienThiDiemDanhActivity"
+            android:name=".Select.Select_Khoa"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -64,6 +64,8 @@
             android:name=".Tinhnang.Hienthi_Diem" />
         <activity
             android:name=".Tinhnang.Hienthi_Diem_Chitiet" />
+        <activity
+            android:name=".Tinhnang.Edit_Thongtinsinhvien" />
     </application>
 
 </manifest>
