[dang lam] Bieudo học sinh vắng

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Quanlysinhvien_app"
         tools:targetApi="31">
         <activity
-            android:name=".Bieudo.SinhVienVang"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,8 +22,8 @@
             </intent-filter>
         </activity>
 
-        <activity
-            android:name=".MainActivity"/>
+<!--        <activity-->
+<!--            android:name=".MainActivity"/>-->
 
         <activity
             android:name=".CaidatActivity" />
