[Bổ sung] Tính năng bổ sung biểu đồ thêm

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,7 +69,8 @@
 
         <activity
             android:name=".Tinhnang.HienThiDiemDanhActivity" />
-
+        <activity
+            android:name=".Bieudo.SinhVienVang" />
 
     </application>
 
