[ Hoàn thành ] Tính năng thêm môn học + Build lại DatabaseHelper, cắt giảm một số baảng + sửa tính năng auto thêm dữ liệu mẫu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Quanlysinhvien_app"
         tools:targetApi="31">
         <activity
-            android:name=".Select.Select_Sinhvien"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +23,14 @@
         </activity>
 
         <activity
-            android:name=".MainActivity" />
+            android:name=".Select.Select_Sinhvien" />
 
         <activity
             android:name=".CaidatActivity" />
+        <activity
+            android:name=".Tinhnang.ThemMonHoc" />
+        <activity
+            android:name=".Tinhnang.Themsinhvien" />
 
     </application>
 
