[ Hoàn thành ] Tính năng thêm lớp học

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
             android:name=".Tinhnang.ThemMonHoc" />
         <activity
             android:name=".Tinhnang.Themsinhvien" />
-
+        <activity
+            android:name=".Tinhnang.ThemLopActivity" />
     </application>
 
 </manifest>
