[ Hoàn thành ] Tính năng thêm Điểm

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
             android:name=".Tinhnang.Themsinhvien" />
         <activity
             android:name=".Tinhnang.ThemLopActivity" />
+        <activity
+            android:name=".Tinhnang.ThemDiemThiActivity" />
     </application>
 
 </manifest>
