[Đang làm ] Build lại tính năng thêm sv, giới tính, ngày sinh, nơi sinh, địa chỉ, mã lớp vào spinner

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
             android:name=".Tinhnang.ThemLopActivity" />
         <activity
             android:name=".Tinhnang.ThemDiemThiActivity" />
+        <activity
+            android:name=".Select.Select_Thongtinsinhvien" />
     </application>
 
 </manifest>
