[Hoàn thành] Tính năng Chỉnh sửa thông tin sinh viên

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
             android:name=".Tinhnang.ThemDiemThiActivity" />
         <activity
             android:name=".Select.Select_Thongtinsinhvien" />
+        <activity
+            android:name=".Tinhnang.ChinhSuaThongTinSinhVien" />
     </application>
 
 </manifest>
