[Hoàn thành] Tính năng Hiển thị danh sách Lớp học

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,8 @@
             android:name=".Tinhnang.ChinhSuaThongTinSinhVien" />
         <activity
             android:name=".Select.Select_Khoa" />
+        <activity
+            android:name=".Select.Select_Lop" />
 
     </application>
 
