--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
             android:name=".Select.Select_Khoa" />
         <activity
             android:name=".Select.Select_Lop" />
+        <activity
+            android:name=".Select.Select_BangDiemThi" />
 
     </application>
 
