[HOÀN THÀNH] Tính năng "Hiển thị danh sách Môn Học" và "Chỉnh sửa Môn Học"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,11 @@
         <activity
             android:name=".Select.Select_BangDiemThi" />
         <activity
-            android:name=".Tinhnang.ChinhSuaDiem" />
+            android:name=".Select.Select_MonHoc" />
+
+        <activity
+            android:name=".Tinhnang.ChinhSuaMonHoc" />
+
     </application>
 
 </manifest>
