--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Quanlysinhvien_app"
         tools:targetApi="31">
         <activity
-            android:name=".SplashScreenActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -50,8 +50,7 @@
 
         <activity
             android:name=".Tinhnang.ChinhSuaMonHoc" />
-        <activity
-            android:name=".MainActivity" />
+<!--        <activity-->
+<!--            android:name=".MainActivity" />-->
     </application>
-
 </manifest>
