[HOÀN THÀNH] Tính năng "Avatar sinh vien theo gioi tính" và "trỏ các nút đến chức năng cho MainActivity"

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,9 @@
 
         <activity
             android:name=".Tinhnang.ChinhSuaMonHoc" />
+        <activity
+            android:name=".Tinhnang.ChinhSuaDiem" />
+
 <!--        <activity-->
 <!--            android:name=".MainActivity" />-->
     </application>
