[UPDATES ]  Fix giao diện Nhập điểm danh và Pin code

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,7 +71,8 @@
             android:name=".Tinhnang.HienThiDiemDanhActivity" />
         <activity
             android:name=".Bieudo.SinhVienVang" />
-
+        <activity
+            android:name=".LockScreenActivity" />
     </application>
 
 </manifest>
