[UPDATES ]  Fix giao diện Hienthidiemdanh và BieudoThongKE

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,14 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/logo_truong"
+        android:icon="@drawable/logo_app__plus"
         android:label="@string/app_name"
-        android:roundIcon="@drawable/logo_truong"
+        android:roundIcon="@drawable/logo_app__plus"
         android:supportsRtl="true"
         android:theme="@style/Theme.Quanlysinhvien_app"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".User.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,8 +22,8 @@
             </intent-filter>
         </activity>
 
-<!--        <activity-->
-<!--            android:name=".MainActivity"/>-->
+        <activity
+            android:name=".MainActivity"/>
 
         <activity
             android:name=".CaidatActivity" />
@@ -34,8 +34,8 @@
             android:name=".Select.Select_Lop" />
         <activity
             android:name=".Select.Select_Khoa" />
-<!--        <activity-->
-<!--            android:name=".Select.Select_Sinhvien" />-->
+        <activity
+            android:name=".Select.Select_Sinhvien" />
         <activity
             android:name=".Tinhnang.Diemdanhsv" />
 <!--        <activity-->
@@ -51,7 +51,7 @@
         <activity
             android:name=".Select.Select_Nganh" />
         <activity
-            android:name=".Select.Select_Sinhvien" />
+            android:name=".User.quenpass" />
 
         <activity
             android:name=".Tinhnang.Nhapdiem" />
